--- a/src/global.css
+++ b/src/global.css
@@ -4,3 +4,18 @@
   box-sizing: border-box;
   text-transform: none;
 }
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .load-text {
+    font-size: 22px;
+  }
+}
